@@ -15,7 +15,6 @@ input, select, textarea, #content #chatList, #content #onlineListContainer, #con
 }
 
 #content #inputFieldContainer {
-    /*	background:#0E0E0E;*/
     padding: 0;
 }
 
@@ -28,11 +27,9 @@ input, select, textarea, #content #chatList, #content #onlineListContainer, #con
 
 #content #inputFieldContainer #inputField:focus {
     outline: none;
-/*    box-shadow: 0px 0px 8px 1px #376e34;*/
 }
 
 #loginContent #loginButton {
-    /*background-color:#424242;*/
     color: #b0b8a8;
     border-radius: 3px;
 }
@@ -43,11 +40,6 @@ input, select, textarea, #content #chatList, #content #onlineListContainer, #con
 
 .ajax-chat {
     height: 100%;
-    /*	background-color: #464646;
-        background-image: -webkit-linear-gradient(top, #464646, #181818);
-        background-image:    -moz-linear-gradient(top, #464646, #181818);
-        background-image:      -o-linear-gradient(top, #464646, #181818);
-        background-image:         linear-gradient(to bottom, #464646, #181818);*/
     color: #fff;
 }
 
@@ -77,7 +69,6 @@ input, select, textarea, #content #chatList, #content #onlineListContainer, #con
 }
 
 #content #chatList, #content #onlineListContainer, #content #helpContainer, #content #settingsContainer {
-    /*	background-color:#171717;*/
     border: 0;
 }
 
@@ -193,21 +184,8 @@ input, select, textarea, #content #chatList, #content #onlineListContainer, #con
     color: red;
 }
 
-#content #chatList a,
-.ajax-chat a {
-    color: #65f1df;
-}
-
 #content #chatList .deleteSelected {
     border-color: red;
-}
-
-#content #onlineListContainer h3, #content #helpContainer h3, #content #settingsContainer h3 {
-    /*	background-color: #171717;
-        background-image: -webkit-linear-gradient(top, #3b6c37, #223220, #171717);
-        background-image: -moz-linear-gradient(top, #3b6c37, #223220, #171717);
-        background-image: -o-linear-gradient(top, #3b6c37, #223220, #171717);
-        background-image: linear-gradient(to bottom, #3b6c37, #223220, #171717);*/
 }
 
 #content #chatList span.dateTime {
