@@ -1,4 +1,6 @@
 12 Sept, 2017
+update css/js minified files
+update AJAX Chat links to behave same as the rest of the site
 fix blackjack cards incorrect info in sql table
 fix AJAX Chat log viewer
 add link to AJAX Chat log viewer
